--- a/literature.bib
+++ b/literature.bib
@@ -13,8 +13,7 @@
 
 @Misc{Hale2022,
   author       = {Britta Hale and Chelsea Komlo},
-  howpublished = {Cryptology ePrint Archive, Paper 2022/449},
-  note         = {\url{https://eprint.iacr.org/2022/449}},
+  howpublished = {Cryptology ePrint Archive},
   title        = {On End-to-End Encryption},
   year         = {2022},
   comment      = {Good starting ponit for End-2-End encryption.
@@ -39,15 +38,16 @@ Curial:
 }
 
 @InProceedings{Nabeel2017,
-  author  = {Nabeel, Mohamed},
-  title   = {The Many Faces of End-to-End Encryption and Their Security Analysis},
-  year    = {2017},
-  month   = {06},
-  pages   = {252-259},
-  comment = {Proposes different Adversary Models for E2E ecnryption.
+  author    = {Nabeel, Mohamed},
+  booktitle = {2017 IEEE International Conference on Edge Computing (EDGE)},
+  title     = {The Many Faces of End-to-End Encryption and Their Security Analysis},
+  year      = {2017},
+  month     = {06},
+  pages     = {252-259},
+  comment   = {Proposes different Adversary Models for E2E ecnryption.
 Key finding: Revealing Metadata to attackers might compromise privacy (e.g. sharing relation)},
-  eprint  = {https://doi.org/10.1109/IEEE.EDGE.2017.47},
-  groups  = {Requirements, Adversary Models},
+  eprint    = {https://doi.org/10.1109/IEEE.EDGE.2017.47},
+  groups    = {Requirements, Adversary Models},
 }
 
 @Article{Nieles2017,
@@ -63,14 +63,13 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 }
 
 @Misc{Mallory2022,
-  author       = {Mallory, Knodel and Fred Baker and Olaf, Kolkman and Sofia, Celi and Gurshabad, Grover.},
-  howpublished = {\url{https://datatracker.ietf.org/doc/draft-knodel-e2ee-definition/}},
-  month        = jul,
-  note         = {Accessed: 2022-08-31},
-  title        = {Definition of End-to-end Encryption},
-  year         = {2022},
-  eprint       = {https://datatracker.ietf.org/doc/draft-knodel-e2ee-definition/},
-  groups       = {Adversary Models},
+  author = {Mallory, Knodel and Fred Baker and Olaf, Kolkman and Sofia, Celi and Gurshabad, Grover.},
+  month  = jul,
+  note   = {Accessed: 2022-08-31},
+  title  = {Definition of End-to-end Encryption},
+  year   = {2022},
+  eprint = {https://datatracker.ietf.org/doc/draft-knodel-e2ee-definition/},
+  groups = {Adversary Models},
 }
 
 @InProceedings{Ermoshina2016,
@@ -94,13 +93,12 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 }
 
 @Misc{WebCryptoApi2017,
-  author       = {Watson, Mark},
-  howpublished = {\url{https://www.w3.org/TR/WebCryptoAPI/}},
-  note         = {Accessed: 2022-09-05},
-  title        = {Web Cryptography API},
-  year         = {2017},
-  eprint       = {https://www.w3.org/TR/WebCryptoAPI/},
-  groups       = {Requirements},
+  author = {Watson, Mark},
+  note   = {Accessed: 2022-09-05},
+  title  = {Web Cryptography API},
+  year   = {2017},
+  eprint = {https://www.w3.org/TR/WebCryptoAPI/},
+  groups = {Requirements},
 }
 
 @InProceedings{Halpin2014,
@@ -108,26 +106,20 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   booktitle = {Proceedings of the 23rd International Conference on World Wide Web},
   title     = {The W3C Web Cryptography API: Motivation and Overview},
   year      = {2014},
-  address   = {New York, NY, USA},
   pages     = {959–964},
   publisher = {Association for Computing Machinery},
   series    = {WWW '14 Companion},
-  abstract  = {The W3C Web Cryptography API is the standard API for accessing cryptographic primitives in Javascript-based environments. We describe the motivations behind the creation of the W3C Web Cryptography API and give a high-level overview with motivating use-cases while addressing objections.},
   eprint    = {https://doi.org/10.1145/2567948.2579224},
   groups    = {Requirements},
-  isbn      = {9781450327459},
-  location  = {Seoul, Korea},
-  numpages  = {6},
 }
 
 @Misc{Levenson2018,
-  author       = {Levenson, Hannah},
-  howpublished = {\url{https://dzone.com/articles/the-principle-of-least-effort-an-integral-part-of}},
-  note         = {Accessed: 2022-09-06},
-  title        = {The Principle of Least Effort: An Integral Part of UX},
-  year         = {2018},
-  eprint       = {https://dzone.com/articles/the-principle-of-least-effort-an-integral-part-of},
-  groups       = {Requirements},
+  author = {Levenson, Hannah},
+  note   = {Accessed: 2022-09-06},
+  title  = {The Principle of Least Effort: An Integral Part of UX},
+  year   = {2018},
+  eprint = {https://dzone.com/articles/the-principle-of-least-effort-an-integral-part-of},
+  groups = {Requirements},
 }
 
 @Article{Isobe2021,
@@ -145,14 +137,9 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   booktitle = {Proceedings of the Second ACM Conference on Data and Application Security and Privacy},
   title     = {Towards End-to-End Secure Content Storage and Delivery with Public Cloud},
   year      = {2012},
-  address   = {New York, NY, USA},
   pages     = {257–-266},
   publisher = {Association for Computing Machinery},
-  series    = {CODASPY '12},
   eprint    = {https://doi.org/10.1145/2133601.2133633},
-  isbn      = {9781450310918},
-  location  = {San Antonio, Texas, USA},
-  numpages  = {10},
 }
 
 @InProceedings{Davis2001,
@@ -329,29 +316,19 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   journal = {Signal},
 }
 
-@Article{Blum2020,
-  author  = {Blum, Josh and Booth, Simon and Gal, Oded and Krohn, Maxwell and Len, J and Lyons, K and Marcedone, A and Maxim, M and Mou, ME and O’Connor, J and others},
-  journal = {Zoom Video Commun., Inc., San Jose, CA, Tech. Rep. Version},
-  title   = {Zoom Cryptography Whitepaper},
-  year    = {2020},
-  number  = {1},
-  volume  = {2},
-  eprint  = {https://github.com/zoom/zoom-e2e-whitepaper},
-  groups  = {Solutions},
+@TechReport{Blum2020,
+  author = {Blum, Josh and Booth, Simon and Gal, Oded and Krohn, Maxwell and Len, J and Lyons, K and Marcedone, A and Maxim, M and Mou, ME and O’Connor, J and others},
+  title  = {Zoom Cryptography Whitepaper},
+  year   = {2020},
+  eprint = {https://github.com/zoom/zoom-e2e-whitepaper},
+  groups = {Solutions},
 }
 
-@Misc{Barnes2014,
-  author       = {Richard Barnes},
-  howpublished = {RFC 7165},
-  month        = apr,
-  title        = {{Use Cases and Requirements for JSON Object Signing and Encryption (JOSE)}},
-  year         = {2014},
-  abstract     = {Many Internet applications have a need for object-based security mechanisms in addition to security mechanisms at the network layer or transport layer. For many years, the Cryptographic Message Syntax (CMS) has provided a binary secure object format based on ASN.1. Over time, binary object encodings such as ASN.1 have become less common than text-based encodings, such as the JavaScript Object Notation (JSON). This document defines a set of use cases and requirements for a secure object format encoded using JSON, drawn from a variety of application security mechanisms currently in development.},
-  eprint       = {https://www.rfc-editor.org/info/rfc7165},
-  number       = {7165},
-  pagetotal    = {25},
-  publisher    = {RFC Editor},
-  series       = {Request for Comments},
+@TechReport{Barnes2014,
+  author = {Richard Barnes},
+  title  = {{Use Cases and Requirements for JSON Object Signing and Encryption (JOSE)}},
+  year   = {2014},
+  eprint = {https://www.rfc-editor.org/info/rfc7165},
 }
 
 @TechReport{JWA2015,
@@ -362,11 +339,11 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 }
 
 @TechReport{Barker2017,
-  author = {Barker, Elaine and Chen, Lily and Keller, Sharon and Roginsky, Allen and Vassilev, Apostol and Davis, Richard},
-  title  = {Recommendation for pair-wise key-establishment schemes using discrete logarithm cryptography},
-  year   = {2017},
-  eprint = {https://doi.org/10.6028/NIST.SP.800-56Ar3},
-  school = {National Institute of Standards and Technology},
+  author      = {Barker, Elaine and Chen, Lily and Keller, Sharon and Roginsky, Allen and Vassilev, Apostol and Davis, Richard},
+  institution = {National Institute of Standards and Technology},
+  title       = {Recommendation for pair-wise key-establishment schemes using discrete logarithm cryptography},
+  year        = {2017},
+  eprint      = {https://doi.org/10.6028/NIST.SP.800-56Ar3},
 }
 
 @TechReport{JWT2015,
@@ -401,19 +378,17 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint    = {https://doi.org/10.1201/b17668},
 }
 
-@Article{Nielson1993,
-  author  = {Nielson, J},
-  journal = {Nielson Norman Group: Jan},
-  title   = {Response Times: The 3 Important Limits},
-  year    = {1993},
-  volume  = {1},
-  eprint  = {https://www.nngroup.com/articles/response-times-3-important-limits/},
+@InProceedings{Nielson1993,
+  author = {Jakob Nielsen},
+  title  = {Response Times: The 3 Important Limits},
+  year   = {1993},
+  eprint = {https://www.nngroup.com/articles/response-times-3-important-limits/},
 }
 
 @InProceedings{Lion2022,
   author    = {Lion, David and Chiu, Adrian and Stumm, Michael and Yuan, Ding},
-  booktitle = {2022 USENIX Annual Technical Conference (USENIX ATC 22)},
-  title     = {Investigating Managed Language Runtime Performance: Why $\{$JavaScript$\}$ and Python are 8x and 29x slower than C++, yet Java and Go can be Faster?},
+  booktitle = {USENIX Annual Technical Conference (USENIX ATC 22)},
+  title     = {Investigating Managed Language Runtime Performance},
   year      = {2022},
   pages     = {835--852},
   eprint    = {https://www.usenix.org/system/files/atc22-lion.pdf},
@@ -429,11 +404,11 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint    = {https://doi.org/10.1007/978-3-658-14569-9_2},
 }
 
-@Article{Boes2022,
+@Book{Boes2022,
   author = {Boes, Andreas and Hess, Thomas and Pretschner, Alexander and K{\"a}mpf, Tobias and Vogl, Elisabeth},
   title  = {Daten--Innovation--Privatheit--Mit Inverser Transparenz das Gestaltungsdilemma der digitalen Arbeitswelt l{\"o}sen},
   year   = {2022},
-  eprint = {https://mediatum.ub.tum.de/doc/1660231},
+  eprint = {https://doi.org/10.36194/INVERSETRANSPARENZ_Mai_2022},
 }
 
 @TechReport{Rescorla2000,
@@ -444,18 +419,17 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 }
 
 @Misc{Weber2021,
-  author       = {Anja Weber},
-  howpublished = {\url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
-  month        = jun,
-  note         = {Accessed: 2010-09-30},
-  title        = {Nutzung von Cloud-Computing steigt im Corona-Jahr},
-  year         = {2021},
-  eprint       = {https://www.bitkom-research.de/de/pressemitteilung/nutzung-von-cloud-computing-steigt-im-corona-jahr},
+  author = {Anja Weber},
+  month  = jun,
+  note   = {Accessed: 2010-09-30},
+  title  = {Nutzung von Cloud-Computing steigt im Corona-Jahr},
+  year   = {2021},
+  eprint = {https://www.bitkom-research.de/de/pressemitteilung/nutzung-von-cloud-computing-steigt-im-corona-jahr},
 }
 
 @InProceedings{Greschbach2012,
   author    = {Greschbach, Benjamin and Kreitz, Gunnar and Buchegger, Sonja},
-  booktitle = {2012 IEEE International Conference on Pervasive Computing and Communications Workshops},
+  booktitle = {IEEE International Conference on Pervasive Computing and Communications Workshops},
   title     = {The devil is in the metadata — New privacy challenges in Decentralised Online Social Networks},
   year      = {2012},
   pages     = {333-339},
@@ -503,11 +477,10 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 }
 
 @TechReport{IPSEC2011,
-  author    = {Frankel, Sheila and Krishnan, Suresh},
-  title     = {IP Security (IPsec) and Internet Key Exchange (IKE) Document Roadmap},
-  year      = {2011},
-  eprint    = {https://www.rfc-editor.org/rfc/rfc6071},
-  publisher = {RFC Editor},
+  author = {Frankel, Sheila and Krishnan, Suresh},
+  title  = {IP Security (IPsec) and Internet Key Exchange (IKE) Document Roadmap},
+  year   = {2011},
+  eprint = {https://www.rfc-editor.org/rfc/rfc6071},
 }
 
 @Article{Wolf2007,
@@ -516,7 +489,6 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   title     = {State of the art: Embedding security in vehicles},
   year      = {2007},
   pages     = {1--16},
-  volume    = {2007},
   eprint    = {https://doi.org/10.1155/2007/74706},
   publisher = {Springer},
 }
@@ -533,20 +505,16 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
 
 @InProceedings{Braz2007,
   author    = {Braz, Christina and Seffah, Ahmed and M'Raihi, David},
-  booktitle = {Human-Computer Interaction -- INTERACT 2007},
+  booktitle = {Human-Computer Interaction -- INTERACT},
   title     = {Designing a Trade-Off Between Usability and Security: A Metrics Based-Model},
   year      = {2007},
-  address   = {Berlin, Heidelberg},
-  editor    = {Baranauskas, C{\'e}cilia and Palanque, Philippe and Abascal, Julio and Barbosa, Simone Diniz Junqueira},
   pages     = {114--126},
-  publisher = {Springer Berlin Heidelberg},
   abstract  = {The design of usable yet secure systems raises crucial questions when it comes to balancing properly security and usability. Finding the right tradeoff between these two quality attributes is not an easy endeavor. In this paper, we introduce an original design model based on a novel usability inspection method. This new method, named Security Usability Symmetry (SUS), exploits automata machines theory and introduces the concept of an advanced Multifunction Teller Machine (MTM). We demonstrate, via case study, how to use this model during the design of secure, usable interactive systems.},
   eprint    = {https://doi.org/10.1007/978-3-540-74800-7_9},
-  isbn      = {978-3-540-74800-7},
 }
 
 @Article{Rehman2013,
-  author  = {ur Rehman, Tousif and Khan, Muhammad Naeem Ahmed and Riaz, Naveed},
+  author  = {Tousif ur Rehman, Muhammad Naeem Ahmed Khan, Naveed Riaz},
   journal = {International Journal of Information Technology and Computer Science (IJITCS)},
   title   = {Analysis of requirement engineering processes, tools/techniques and methodologies},
   year    = {2013},
@@ -570,12 +538,12 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   eprint = {https://www.rfc-editor.org/rfc/rfc8551},
 }
 
-@Book{Barker2006,
-  author    = {Barker, Elaine and Barker, Elaine and Burr, William and Polk, William and Smid, Miles and others},
-  publisher = {National Institute of Standards and Technology, Technology Administration~…},
-  title     = {Recommendation for key management: Part 1: General},
-  year      = {2006},
-  eprint    = {https://doi.org/10.6028/NIST.SP.800-57pt1r5},
+@TechReport{Barker2006,
+  author      = {Barker, Elaine and Barker, Elaine and Burr, William and Polk, William and Smid, Miles and others},
+  institution = {National Institute of Standards and Technology},
+  title       = {Recommendation for key management},
+  year        = {2006},
+  eprint      = {https://doi.org/10.6028/NIST.SP.800-57pt1r5},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
