--- a/txt/3-requirements.tex
+++ b/txt/3-requirements.tex
@@ -117,6 +117,7 @@ Whenever a user receives an encrypted log it needs to be sure that the originato
 Moreover, the receiver also needs to be sure that the data owner intended to share the log with him or her.
 
 The following exemplary attack motivates this requirement.
+It is motivated by surreptitious forwarding~\cite{Davis2001}.
 Assume Alice to be a data owner and Eve to be a malicious user.
 Further, assume that Alice shares an access log with Eve.
 Eve has valid access to the log and can decrypt the encrypted log.
