--- a/txt/7-evaluation.tex
+++ b/txt/7-evaluation.tex
@@ -152,7 +152,7 @@ Instead of providing a unique identity within the metadata, a random pseudonym o
 Assuming that the intermediate server can not link pseudonyms back to users, this would make the metadata analysis pointless.
 
 \subsection{Surreptitious forwarding}
-Surreptitious forwarding refers to an attack where a malicious user re-encrypts a received log for unintended users~\cite{Davis2001}.
+Surreptitious forwarding refers to an attack where a malicious user re-encrypts and forwards a received log for unintended users~\cite{Davis2001}.
 Since such attacks must be detected the security requirement S2 was introduced.
 Receivers of encrypted logs must be able to verify that the log was intentionally shared with them.
 Recall the attacker described in \cref{security-requriements}.
